# SpecGraph

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONSTITUTION.md  CONTRIBUTING.md  Makefile  Package.swift  README.md  pyproject.toml  specgraph.project.yaml  tasks.md  tasks_archive.md
.github/: PULL_REQUEST_TEMPLATE.md
conversation_memory/: README.md
docs/: conversation_memory_viewer_contract.md  exploration_preview_viewer_contract.md  graph_backlog_projection_viewer_contract.md  hosted-operation-canary-review-object.md  implementation_work_viewer_contract.md  metric_pack_viewer_contract.md  metrics_visualization_guide.md  ontology_spec_validation_roadmap.md  ontologyc_adapter_report_contract.md  product_workspace_graph_versioning_roadmap.md  product_workspace_initialization_viewer_contract.md  product_workspace_stable_mode_guide.md  project_environment_viewer_contract.md  proposal_spec_trace_viewer_contract.md  spec_activity_feed_viewer_contract.md  specpm_viewer_contract.md  specspace_contextbuilder_integration.md  static_artifact_publish.md  supervisor_executor_adapter_gateway_contract.md  supervisor_manual.md  supervisor_problem_diagnosis_viewer_contract.md  supervisor_refactor_roadmap.md  temporary_implementation_work_tasks.md
landing/: index.html
runs/: candidate_approval_decision.json  product_candidate_promotion_review_object_evidence.json  repaired_candidate_repair_loop_report.json  repaired_candidate_spec_graph.json
tests/: conftest.py  test_active_idea_to_spec_candidate_source.py  test_architecture_metrics.py  test_architecture_style.py  (+70 more)
(+790 files in other folders)
