[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specgraph"
version = "0.1.0"
description = "Default Python project scaffold for SpecGraph"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SpecGraph" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
