[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specgraph"
version = "0.1.0"
description = "Default Python project scaffold for SpecGraph"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SpecGraph" }]
dependencies = ["pyyaml==6.0.3"]

[project.optional-dependencies]
dev = ["pytest==9.0.2", "ruff==0.15.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tools", "tests"]
extend-exclude = [".worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
